Make scrollframes use the pref width of the scrollbar, not the min width, for determining pref width.  Fixes bug 363528, r+sr=dbaron